Actualización de verificacion de firma + conección con backend

--- a/src/app/pages/private/user/documentos/documentos.html
+++ b/src/app/pages/private/user/documentos/documentos.html
@@ -58,3 +58,13 @@
   </div>
 
 </div>
+
+<app-verificacion-reporte
+  *ngIf="mostrarModal && resultadoVerificacion"
+  [resultado]="resultadoVerificacion!"
+  [mostrarModal]="mostrarModal"
+  (cerrar)="cerrarModal()"
+  (descargar)="descargarPDF()">
+</app-verificacion-reporte>
+
+
