--- a/src/app/pages/public/servicios/servicios.html
+++ b/src/app/pages/public/servicios/servicios.html
@@ -41,6 +41,6 @@
   </div>
 
   <div class="firma-preview">
-    <img src="assets/img/FirmaDigital.png" alt="Vista previa de firma" />
+    <img src="assets/img/prueba.png" alt="Vista previa de firma" />
   </div>
 </section>
